* Adjusted text position in Windows 7 menus.
* Minor bug fixes to CString
* CSocket now works for WinCE
* CSocket send and receive functions now use char and support binary data. 
	 
New Features and Enhancements
* TRACE now accepts both ANSI and Unicode strings.
* CFile functions are now virtual
* Frames now use IDW_READY for the "Ready" string
* Added project files for VS2013


Changes in detail
-----------------
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified  CWnd::DeferWindowPos		now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files

Incompatibilities with previous versions
----------------------------------------
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready" 


Version 7.3
===========

New Features and Enhancements
-----------------------------
* Adjusted the frame's appearance
	- Updated the visual appearance of popup menus on systems using Windows Aero. On 
	  systems with Aero, popup menus are rendered with Windows Visual Styles. Systems
	  without Aero continue to use the Win32++ theme for popup menus.
	- Frames now honour the current window theme's menu and status fonts.
	- the frame's appearance changes dynamically to reflect changes to the window theme.
	- minor adjustment to the rebar theme colours for the "Modern" theme.
	
* Extended CWebBrowser