@@ -250,6 +250,12 @@ namespace Win32xx
 			}
 			break;
 
+		case WM_DESTROY:
+			{
+				OnDestroy();
+				return 0L;
+			}
+
 		case WM_NOTIFY:
 			{
 				// Do Notification reflection if it came from a CWnd object
@@ -940,6 +946,7 @@ namespace Win32xx
 
 		case WM_DESTROY:
 			m_bInitialUpdate = FALSE;
+			OnDestroy();
 			break;
 
 		case WM_SYSCOMMAND:
