@@ -16,10 +16,10 @@ public:
 	virtual ~CViewFiles();
 	virtual int  AddItem(LPCTSTR szText, int nImage);
 	virtual void InsertItems();
+	virtual void OnDestroy();
 	virtual void OnInitialUpdate();
 	virtual void SetColumns();
 	virtual BOOL SetSubItem(int nItem, int nSubItem, LPCTSTR szText);
-	virtual LRESULT WndProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 
 private:
 	HIMAGELIST m_himlSmall;
